Tags - new post Page (need improvement), amendments

--- a/src/main/webapp/app/entities/post/post-update.component.html
+++ b/src/main/webapp/app/entities/post/post-update.component.html
@@ -7,38 +7,78 @@
                 <div class="form-group" [hidden]="!editForm.get('id').value">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id" formControlName="id"
-                        readonly />
+                           readonly/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="soundgramApp.post.postContent" for="field_postContent">Post Content</label>
+                    <label class="form-control-label" jhiTranslate="soundgramApp.post.postContent"
+                           for="field_postContent">Post Content</label>
                     <input type="text" class="form-control" name="postContent" id="field_postContent"
                            formControlName="postContent"/>
                 </div>
 
-                <div class="form-group">
-                    <label jhiTranslate="soundgramApp.post.tag" for="field_tags">Tag</label>
-                    <button id="jh-create-tag" class="btn btn-primary jh-create-entity create-audio-file" [routerLink]="['/tag/new']">
-                        <fa-icon [icon]="'plus'"></fa-icon>
-                        <span class="hidden-sm-down" >
-                        Add Tag
-                    </span>
+                <!--                                <div class="form-group">
+                                                    <label jhiTranslate="soundgramApp.post.tag" for="field_tags">Tag</label>
+                                                    <button id="jh-create-tag" class="btn btn-primary jh-create-entity create-audio-file" [routerLink]="['/tag/new']">
+                                                        <fa-icon [icon]="'plus'"></fa-icon>
+                                                        <span class="hidden-sm-down" >
+                                                        Add Tag
+                                                    </span>
+                                                    </button>
+                                                    <select class="form-control" id="field_tags" multiple name="tags" formControlName="tags">
+                                                        <option [ngValue]="getSelected(editForm.get('tags').value, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagByName">{{tagOption.name}}</option>
+                                                    </select>
+                                                </div>-->
+
+                <form name="form" role="form" (ngSubmit)="makeNewTag()" [formGroup]="tagForm" *ngIf="!success">
+                    <div class="form-group">
+                        <label class="form-control-label" for="tagName">Enter tag name</label>
+                        <input type="text" class="form-control" id="tagName" name="tagName" formControlName="tagName">
+                        <div
+                            *ngIf="tagForm.get('tagName').invalid && (tagForm.get('tagName').dirty || tagForm.get('tagName').touched)">
+                            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.required">
+                                Tag name is required.
+                            </small>
+                            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.minlength">
+                                Tag is required to be at least 1 character.
+                            </small>
+                            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.maxlength">
+                                Tag cannot be longer than 50 characters.
+                            </small>
+                            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.pattern">
+                                Tag can only contain letters and digits.
+                            </small>
+                        </div>
+                    </div>
+                    <button type="submit" [disabled]="tagForm.invalid" class="btn btn-primary">Assign tag to this post
                     </button>
-                    <select class="form-control" id="field_tags" multiple name="tags" formControlName="tags">
-                        <option [ngValue]="getSelected(editForm.get('tags').value, tagOption)" *ngFor="let tagOption of tags; trackBy: trackTagByName">{{tagOption.name}}</option>
-                    </select>
+                </form>
+
+                <div *ngIf="postTags">
+                    <h4>Post tags</h4>
+                    <ul class="tags">
+                        <li *ngFor="let tag of postTags">
+                            <span class="badge">{{tag.name}}</span> {{tag.id}}
+                            <button type="submit" (click)="deleteTagFromPost(tag)"
+                                    class="btn btn-danger btn-sm">
+                                <fa-icon [icon]="'times'"></fa-icon>
+                                <span class="d-none d-md-inline">Delete tag from this post</span>
+                            </button>
+                        </li>
+                    </ul>
                 </div>
 
-<!--                <button type="file" id="jh-create-audio" class="btn btn-primary jh-create-entity create-audio-file" (change)="selectFile($event)">
-                    <fa-icon [icon]="'plus'"></fa-icon>
-                    <span class="hidden-sm-down" >
-                        Add audio file
-                    </span>
-                </button>-->
+
+                <!--                <button type="file" id="jh-create-audio" class="btn btn-primary jh-create-entity create-audio-file" (change)="selectFile($event)">
+                                    <fa-icon [icon]="'plus'"></fa-icon>
+                                    <span class="hidden-sm-down" >
+                                        Add audio file
+                                    </span>
+                                </button>-->
 
                 <div style="text-align:center">
                     <label>
                         <span>Dodaj plik audio: </span>
-                        <input type="file"(change)="selectAudioFile($event)">
+                        <input type="file" (change)="selectAudioFile($event)">
                     </label>
                     <!--<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>-->
                 </div>
@@ -55,10 +95,11 @@
 
             </div>
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">
+                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving"
+                        class="btn btn-primary">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                 </button>
             </div>
