--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -111,7 +111,7 @@
 <!--                        <fa-icon [icon]="'pencil-alt'"></fa-icon>-->
 <!--                        <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>-->
 <!--                    </button>-->
-                    <button type="submit" (click)="deleteFromProfile(tag)"
+                    <button type="submit" (click)="deleteTagFromProfile(tag)"
                             class="btn btn-danger btn-sm">
                         <fa-icon [icon]="'times'"></fa-icon>
                         <span class="d-none d-md-inline" >Delete tag from your profile</span>
