--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -2,7 +2,7 @@
     <div class="col-8">
         <div>
             <h2>
-                <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]
+                <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]  <img id="avatar"/>
             </h2>
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="userManagement.login">Login</span></dt>
